--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- P·gina inicial -->
+<!-- P√°gina inicial -->
 <!-- Portal Home Page -->
 <html>
 <head>
@@ -25,17 +25,17 @@
 	<center> <a href="Sobre.html"><img src="but5.png"></a></div> 
 	</div>
 	<div id="fundo">
-		<div id="text1"><h2> Ol&aacute;,</h2>
+		<div id="text1"><h2> Ol√°,</h2>
 
 		<p>bem-vindx ao LABart Studios, nossa empresa trabalha em v&aacute;rias &aacute;reas, dentre elas:</p>
 			<ul>
 			<li>Designs por demanda;</li>
-			<li> EdiÁ„o de v&iacute;deo; </li>
+			<li> Edi√ß√£o de v&iacute;deo; </li>
 			<li> Anima&ccedil;&atilde;o; </li>
-			<li> ProduÁ„o de webcomics; </li>
+			<li> Produ√ß√£o de webcomics; </li>
 		</ul>
 		<p>assim como outras &aacute;reas art&iacute;sticas. Para mais informa&ccedil;&otilde;es, veja nossos <a href="Projeto.html">Projetos</a> e <a href="Sobre.html">Informa&ccedil;&otilde;es da Empresa</a>.</p>
-		<p>AlÈm de nossos projetos, trabalhamos com demanda e parceria, caso esteja a procura de algu&eacute;m na nossa ·rea de serviÁos basta <a href="Contato.html">Entrar em contato</a>.</p>
+		<p>Al√©m de nossos projetos, trabalhamos com demanda e parceria, caso esteja a procura de algu&eacute;m na nossa √°rea de servi√ßos basta <a href="Contato.html">Entrar em contato</a>.</p>
 		<p>Se procura mais informa&ccedil;&otilde;es sobre nossos designers, roteristas, animadores ou gostaria de trabalhar conosco, basta entrar na p&aacute;gina <a href="Equipe.html">Equipe</a>.</div>
 		<div id="labartis"></div>
 
